--- a/lib/cloudstack-nagios/templates/icinga2/cloudstack_async_jobs.cfg.erb
+++ b/lib/cloudstack-nagios/templates/icinga2/cloudstack_async_jobs.cfg.erb
@@ -1,15 +1,16 @@
 
-define command {
-        command_name         cs-nagios_check-asyncjobs
-        command_line         <%= bin_path -%>cs-nagios check async_jobs -w $ARG1$ -c $ARG2$ --config <%= config_file %>
-        register             1
+object CheckCommand "cs-nagios_check-asyncjobs" {
+	import "plugin-check-command"
+        command = [  "<%= bin_path -%>cs-nagios check async_jobs" ]
+	arguments = {
+                "-w" = "80"
+                "-c" = "90"
+                "--config" = "<%= config_file %>"
+        }
 }
 
-define service {
-        hostgroup_name       Cloudstack
-        service_description  Cloudstack Async Jobs
-        display_name         Cloudstack Async Jobs
-        use                  Generic-Service,service-pnp
-        check_command        cs-nagios_check-asyncjobs!5!10
-        register             1
+apply Service "Cloudstack Async Jobs" {
+	import "generic-service-pnp"
+        check_command = "cs-nagios_check-asyncjobs"
+	assign where "linux-servers" in host.groups
 }
