--- a/lib/cloudstack-nagios/templates/icinga2/cloudstack_hostgroups.cfg.erb
+++ b/lib/cloudstack-nagios/templates/icinga2/cloudstack_hostgroups.cfg.erb
@@ -1,24 +1,16 @@
 
-define hostgroup {
-  hostgroup_name  Cloudstack
-  alias           Cloudstack
-  register        1
+object HostGroup "Cloudstack" {
+  display_name = "Cloudstack"
 }
 
-define hostgroup {
-  hostgroup_name  CloudstackRouter
-  alias           CloudstackRouter
-  register        1
+object HostGroup "CloudstackRouter" {
+  display_name = "CloudstackRouter"
 }
 
-define hostgroup {
-  hostgroup_name  CloudstackSystemVm
-  alias           CloudstackSystemVm
-  register        1
+object HostGroup "CloudstackSystemVm" {
+  display_name = "CloudstackSystemVm"
 }
 
-define hostgroup {
-  hostgroup_name CloudstackSSVM
-  alias          CloudstackSSVM
-  register        1
+object HostGroup "CloudstackSSVM" {
+  display_name = "CloudstackSSVM"
 }
