--- a/lib/cloudstack-nagios/templates/icinga2/cloudstack_router_hosts.cfg.erb
+++ b/lib/cloudstack-nagios/templates/icinga2/cloudstack_router_hosts.cfg.erb
@@ -1,14 +1,12 @@
 
 <% routers.each do |router| -%>
   <% if router['linklocalip'] -%>
-define host {
-  host_name      <%= router['name'] %>
-  display_name   <%= router['name'] %> (<%= router['linklocalip'] %>)<%= " - #{router['project']}" if router['project'] %> - <%= router['zonename'] %>
-  address        <%= router['linklocalip'] %>
-  use            Linux-Host,host-pnp
-  hostgroups     CloudstackRouter
-  check_command  check-host-alive
-  register       1
+object Host  "<%= router['name'] %> (<%= router['linklocalip'] %>)<%= " - #{router['project']}" if router['project'] %> - <%= router['zonename'] %>"  {
+  import "generic-host"
+  address = "<%= router['linklocalip'] %>"
+  vars.os = "Linux"
+  vars.os_family = "Debian"
+  groups = [ "CloudstackRouter" ]
 }
 
   <% end -%>
