--- a/lib/cloudstack-nagios/templates/icinga2/cloudstack_snapshots.cfg.erb
+++ b/lib/cloudstack-nagios/templates/icinga2/cloudstack_snapshots.cfg.erb
@@ -1,15 +1,16 @@
 
-define command {
-        command_name         cs-nagios_check-snapshots
-        command_line         <%= bin_path -%>cs-nagios check snapshots -w $ARG1$ -c $ARG2$ --config <%= config_file %>
-        register             1
+object CheckCommand "cs-nagios_check-snapshots" {
+	import "plugin-check-command"
+        command = [ "<%= bin_path -%>cs-nagios check snapshots" ] 
+	arguments = {
+                "-w" = "80"
+                "-c" = "90"
+                "--config" = "<%= config_file %>"
+	}
 }
 
-define service {
-        hostgroup_name       Cloudstack
-        service_description  Cloudstack Snapshots
-        display_name         Cloudstack Snapshots
-        use                  Generic-Service,service-pnp
-        check_command        cs-nagios_check-snapshots!12!24
-        register             1
+apply Service "Cloudstack Snapshots" {
+	import "generic-service-pnp"
+	assign where "Cloudstack" in host.groups
+        check_command = "cs-nagios_check-snapshots"
 }
