--- a/lib/cloudstack-nagios/templates/icinga2/cloudstack_system_vm_hosts.cfg.erb
+++ b/lib/cloudstack-nagios/templates/icinga2/cloudstack_system_vm_hosts.cfg.erb
@@ -1,14 +1,12 @@
 
 <% system_vms.each do |vm| -%>
   <% if vm['privateip'] -%>
-define host {
-  host_name      <%= vm['name'] %>
-  display_name   <%= vm['name'] %> (<%= vm['privateip'] %>) - <%= vm['zonename'] %>
-  address        <%= vm['privateip'] %>
-  use            Linux-Host,host-pnp
-  hostgroups     CloudstackSystemVm<%= ',CloudstackSSVM' if vm['systemvmtype'] == 'secondarystoragevm' %>
-  check_command  check-host-alive
-  register       1
+object Host "<%= vm['name'] %>" {
+  import "generic-host"
+  vars.os = "Linux"
+  vars.os_family = "RedHat"
+  address = "<%= vm['privateip'] %>"
+  groups = [ "CloudstackSystemVm<%= '" , "CloudstackSSVM' if vm['systemvmtype'] == 'secondarystoragevm' %>" ]
 }
 
   <% end -%>
