fix CheckCommand definition with multiple args

--- a/lib/cloudstack-nagios/templates/icinga2/cloudstack_capacities.cfg.erb
+++ b/lib/cloudstack-nagios/templates/icinga2/cloudstack_capacities.cfg.erb
@@ -2,7 +2,7 @@
 <% capacity_types.each do |cap_type, cap_values| -%>
 object CheckCommand "cs-nagios_check-capacity_<%= cap_values[:method_name] %>" {
 	import "plugin-check-command"
-        command = [ "<%= bin_path -%>cs-nagios check capacity <%= cap_values[:method_name] %>" ] 
+        command = [ "<%= bin_path -%>cs-nagios", "check", "capacity", "<%= cap_values[:method_name] %>" ] 
 
 	arguments = {
                 "-w" = "80"
