--- a/lib/cloudstack-nagios/templates/icinga2/cloudstack_async_jobs.cfg.erb
+++ b/lib/cloudstack-nagios/templates/icinga2/cloudstack_async_jobs.cfg.erb
@@ -1,7 +1,7 @@
 
 object CheckCommand "cs-nagios_check-asyncjobs" {
 	import "plugin-check-command"
-        command = [  "<%= bin_path -%>cs-nagios check async_jobs" ]
+        command = [  "<%= bin_path -%>cs-nagios", "check", "async_jobs" ]
 	arguments = {
                 "-w" = "80"
                 "-c" = "90"
