--- a/lib/cloudstack-nagios/templates/icinga2/cloudstack_snapshots.cfg.erb
+++ b/lib/cloudstack-nagios/templates/icinga2/cloudstack_snapshots.cfg.erb
@@ -1,7 +1,7 @@
 
 object CheckCommand "cs-nagios_check-snapshots" {
 	import "plugin-check-command"
-        command = [ "<%= bin_path -%>cs-nagios check snapshots" ] 
+        command = [ "<%= bin_path -%>cs-nagios", "check", "snapshots" ] 
 	arguments = {
                 "-w" = "80"
                 "-c" = "90"
