--- a/lib/cloudstack-nagios/templates/icinga2/cloudstack_storage_pools.cfg.erb
+++ b/lib/cloudstack-nagios/templates/icinga2/cloudstack_storage_pools.cfg.erb
@@ -1,7 +1,7 @@
 
 object CheckCommand "cs-nagios_check-storage_pool" {
 	import "plugin-check-command"
-  	command = [  "<%= bin_path -%>cs-nagios check storage_pool" ]
+  	command = [  "<%= bin_path -%>cs-nagios", "check", "storage_pool" ]
   	arguments = {
                 "--pool_name" = "$ARG3$"
                 "--over_provisioning" = "ARG4"
