--- a/lib/cloudstack-nagios/templates/icinga2/cloudstack_system_vm_services.cfg.erb
+++ b/lib/cloudstack-nagios/templates/icinga2/cloudstack_system_vm_services.cfg.erb
@@ -1,7 +1,7 @@
 
 object CheckCommand "cs-nagios_check_systemvm-memory" {
 	import "plugin-check-command"
-        command = [ "<%= bin_path -%>cs-nagios check system_vm memory" ]
+        command = [ "<%= bin_path -%>cs-nagios", "check", "system_vm memory" ]
         arguments = {
                 "-H" = "$address$"
                 "-w" = "80"
@@ -14,7 +14,7 @@ object CheckCommand "cs-nagios_check_systemvm-memory" {
 
 object CheckCommand "cs-nagios_check_systemvm-cpu" {
 	import "plugin-check-command"
-        command = [ "<%= bin_path -%>cs-nagios check system_vm cpu" ]
+        command = [ "<%= bin_path -%>cs-nagios", "check", "system_vm cpu" ]
 	arguments = {
                 "-H" = "$address$"
                 "-w" = "80"
@@ -27,7 +27,7 @@ object CheckCommand "cs-nagios_check_systemvm-cpu" {
 
 object CheckCommand "cs-nagios_check_systemvm-network" {
 	import "plugin-check-command"
-        command = [ "<%= bin_path -%>cs-nagios check system_vm network" ]
+        command = [ "<%= bin_path -%>cs-nagios", "check", "system_vm network" ]
 	arguments = {
                 "-H" = "$address$"
                 "-w" = "80"
@@ -41,7 +41,7 @@ object CheckCommand "cs-nagios_check_systemvm-network" {
 
 object CheckCommand "cs-nagios_check_systemvm-fsrw" {
 	import "plugin-check-command"
-        command = [ "<%= bin_path -%>cs-nagios check system_vm fs_rw" ]
+        command = [ "<%= bin_path -%>cs-nagios", "check", "system_vm fs_rw" ]
 	arguments = {
                 "-H" = "$address$"
                 "-w" = "80"
@@ -54,7 +54,7 @@ object CheckCommand "cs-nagios_check_systemvm-fsrw" {
 
 object CheckCommand "cs-nagios_check_systemvm-diskusage" {
 	import "plugin-check-command"
-        command = [ "<%= bin_path -%>cs-nagios check system_vm disk_usage" ]
+        command = [ "<%= bin_path -%>cs-nagios", "check", "system_vm disk_usage" ]
 	arguments = {
                 "-H" = "$address$"
                 "-w" = "80"
@@ -68,7 +68,7 @@ object CheckCommand "cs-nagios_check_systemvm-diskusage" {
 
 object CheckCommand "cs-nagios_check_systemvm-secstorrw" {
 	import "plugin-check-command"
-        command = [ "<%= bin_path -%>cs-nagios check system_vm secstor_rw" ]
+        command = [ "<%= bin_path -%>cs-nagios", "check", "system_vm secstor_rw" ]
 	arguments = {
                 "-H" = "$address$"
                 "-w" = "80"
