--- a/lib/cloudstack-nagios/templates/cloudstack_router_services.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_router_services.cfg.erb
@@ -24,6 +24,12 @@ define command {
 }
 
 define command {
+        command_name  cs-nagios_check-varfsrw
+        command_line  <%= bin_path -%>cs-nagios check router fs_rw -H $HOSTADDRESS$ -w $ARG1$ -c $ARG2$ --ssh-key <%= ssh_key %> --ssh-port <%= ssh_port %> --config <%= config_file %> -m /var
+        register      1
+}
+
+define command {
         command_name  cs-nagios_check-diskusage
         command_line  <%= bin_path -%>cs-nagios check router disk_usage -H $HOSTADDRESS$ -w $ARG1$ -c $ARG2$ -P $ARG3$ --ssh-key <%= ssh_key %> --ssh-port <%= ssh_port %> --config <%= config_file %>
         register      1
@@ -74,6 +80,15 @@ define service {
         display_name         Cloudstack Virtual Router RootFS r/w
         use                  Generic-Service,service-pnp
         check_command        cs-nagios_check-rootfsrw!80!90
+        register             1
+}
+
+define service {
+        hostgroup_name       CloudstackRouter
+        service_description  Cloudstack Virtual Router RootFS r/w
+        display_name         Cloudstack Virtual Router RootFS r/w
+        use                  Generic-Service,service-pnp
+        check_command        cs-nagios_check-varfsrw!80!90
         register             1
 }
 
