--- a/lib/cloudstack-nagios/templates/icinga2/cloudstack_system_vm_hosts.cfg.erb
+++ b/lib/cloudstack-nagios/templates/icinga2/cloudstack_system_vm_hosts.cfg.erb
@@ -5,6 +5,8 @@ object Host "<%= vm['name'] %>" {
   import "generic-host"
   address = "<%= vm['privateip'] %>"
   groups = [ "CloudstackSystemVm<%= '" , "CloudstackSSVM' if vm['systemvmtype'] == 'secondarystoragevm' %>" ]
+
+  vars.zone = "<%= zone['name'] %>"
 }
 
   <% end -%>
