--- a/lib/cloudstack-nagios/templates/cloudstack_router_services.cfg.erb
+++ b/lib/cloudstack-nagios/templates/cloudstack_router_services.cfg.erb
@@ -12,6 +12,12 @@ define command {
 }
 
 define command {
+  command_name  cs-nagios_check-cpu-max
+  command_line  <%= bin_path -%>cs-nagios check router cpu -H $HOSTADDRESS$ --mode max -w $ARG1$ -c $ARG2$ --ssh-key <%= ssh_key %> --ssh-port <%= ssh_port %> --config <%= config_file %>
+  register      1
+}
+
+define command {
         command_name  cs-nagios_check-network
         command_line  <%= bin_path -%>cs-nagios check router network -H $HOSTADDRESS$ -w $ARG1$ -c $ARG2$ --if-speed <%= if_speed %> --ssh-key <%= ssh_key %> --ssh-port <%= ssh_port %> --config <%= config_file %>
         register      1
@@ -63,6 +69,15 @@ define service {
         use                  Generic-Service,service-pnp
         check_command        cs-nagios_check-cpu!80!90
         register             1
+}
+
+define service {
+  hostgroup_name       CloudstackRouter
+  service_description  Cloudstack Virtual Router Max CPU
+  display_name         Cloudstack Virtual Router Max CPU
+  use                  Generic-Service,service-pnp
+  check_command        cs-nagios_check-cpu-max!80!90
+  register             1
 }
 
 define service {
